# cpp00-04

./: README.md
cpp00/ex00/: .megaphone.cpp.un~  Makefile  megaphone  megaphone.cpp  megaphone2.cpp
cpp00/ex01/: Makefile  contact  contact.cpp  contact.hpp  main.cpp  phonebook.cpp  phonebook.h
cpp00/ex02/: Account.cpp  Account.hpp  Makefile  account
cpp01/ex00/: Makefile  Zombie.cpp  randomChump.cpp  zombie
cpp01/ex01/: Makefile  ZombieHorde
cpp01/ex01/srcs/: Zombie.cpp  ZombieHorde.cpp
cpp01/ex02/srcs/: main.cpp
cpp01/ex04/: Makefile  sedV2  test.txt  test.txt.replace
cpp01/ex04/includes/: SedV2.hpp
cpp01/ex04/srcs/: SedV2.cpp  main.cpp
cpp01/ex05/: Harl  Makefile
cpp01/ex06/: harl
cpp02/ex00/: Fixed
cpp02/ex00/srcs/: main.cpp
cpp02/ex01/: Fixed
cpp02/ex01/includes/: Fixed.hpp
cpp02/ex02/: Fixed
cpp02/ex02/srcs/: Fixed.cpp
cpp02/ex03/: Fixed
cpp02/ex03/includes/: Fixed.hpp
cpp02/ex03/srcs/: Fixed.cpp  Point.cpp  main.cpp
cpp03/ex00/: claptrap
cpp03/ex01/: Makefile
cpp03/ex02/: claptrap
cpp03/ex02/srcs/: main.cpp
cpp03/ex03/srcs/: main.cpp
cpp04/: CMakeLists.txt
cpp04/ex03/: materia
cpp04/ex03/srcs/: main.cpp
